Fixed some overflow issues

--- a/styles.css
+++ b/styles.css
@@ -76,6 +76,7 @@ a {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    position: relative;
 }
 
 .hero-bg {
